--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
+  <header>
+    <div class="left">
+      <h1 class="logo">facebook</h1>
+      <button class="register-button">注册</button>
+    </div>
+
+    <Nav>
+      <ul>
+        <li class="join-facebook">
+          加入或登录 Facebook
+        </li>
+      </ul>
+
+    </Nav>
+  </header>
+  <main>main</main>
+
   <script src="src/app.js"></script>
 </body>
 </html>
