--- a/index.html
+++ b/index.html
@@ -24,7 +24,32 @@
 
     </Nav>
   </header>
-  <main>main</main>
+  <main>
+    <article class="content">
+      <h1>创建主页</h1>
+      <p>向 Facebook 全球社群推广你的业务、你自己或你的公益理念。选择一个主页类别即可开始操作。</p>
+    </article>
+    <div class="figure-section">
+      <figure>
+        <img src="//facebook.com/images/pages/create/biz_illustration.png" alt="">
+        <figcaption>
+          <div>商家或品牌</div>
+          <div>在 Facebook 上展示商品和服务，突显品牌，向更多顾客推广业务。</div>
+          <div>开始</div>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="//facebook.com/images/pages/create/community_illustration.png" alt="">
+        <figcaption>
+          <div>社群或公众人物</div>
+          <div>
+            与你的社群、组织、团队、小组或俱乐部中的用户建立联系，分享内容。
+          </div>
+          <div>开始</div>
+        </figcaption>
+      </figure>
+    </div>
+  </main>
 
   <script src="src/app.js"></script>
 </body>
