--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
       <figure>
         <img src="//facebook.com/images/pages/create/biz_illustration.png" alt="">
         <figcaption>
-          <div>商家或品牌</div>
-          <div>在 Facebook 上展示商品和服务，突显品牌，向更多顾客推广业务。</div>
-          <div>开始</div>
+          <div class="img-title">商家或品牌</div>
+          <div class="img-description">在 Facebook 上展示商品和服务，突显品牌，向更多顾客推广业务。</div>
+          <button class="start">开始</button>
         </figcaption>
       </figure>
       <figure>
         <img src="//facebook.com/images/pages/create/community_illustration.png" alt="">
         <figcaption>
-          <div>社群或公众人物</div>
-          <div>
+          <div  class="img-title">社群或公众人物</div>
+          <div class="img-description">
             与你的社群、组织、团队、小组或俱乐部中的用户建立联系，分享内容。
           </div>
-          <div>开始</div>
+          <button class="start">开始</button>
         </figcaption>
       </figure>
     </div>
